--- a/src/app/iniciooperaciones/iniciooperaciones.page.html
+++ b/src/app/iniciooperaciones/iniciooperaciones.page.html
@@ -10,6 +10,6 @@
 
 <ion-content>
   <ion-button color="warning" routerLink="/saludo">saludo<ion-icon name="hand-right-outline"></ion-icon></ion-button>
-  <ion-button  routerLink="/operaciones">operaciones</ion-button>
+  <ion-button  routerLink="/calculadora">operaciones</ion-button>
   <ion-button  color="danger" routerLink="/home"><ion-icon name="home"></ion-icon>inicio</ion-button>
 </ion-content>
