--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      <ion-icon name="home"></ion-icon> HOME  
+      <ion-icon name="home"></ion-icon> INICIO 
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,9 @@
   <ion-button shape="round" color="success" routerLink="/contacto" ><ion-icon name="information-circle-outline"></ion-icon>CONTACTOS</ion-button>
   
   <ion-button shape="round" color="success" routerLink="/iniciooperaciones">INICIO OPERACIONES</ion-button>
+
+  <ion-button shape="round" color="success" routerLink="/parcial">PARCIAL</ion-button>
+
   <ion-item>
     <ion-label position="floating"><ion-icon name="person-circle-outline"></ion-icon>NOMBRES:</ion-label>
     <ion-input [(ngModel)]="nombre"></ion-input>
