--- a/src/app/calculadora/calculadora.page.html
+++ b/src/app/calculadora/calculadora.page.html
@@ -22,23 +22,24 @@
   </ion-item>
 
   <ion-button color="warning" (click)="guardar()">
-    <ion-icon name="hand-right-outline"></ion-icon> calcular
+    <ion-icon name="calculator"></ion-icon> calcular
   </ion-button>
 
   <ion-item >
-   LA SUMA DE {{this.numero1}}+{{this.numero2}} = {{this.suma}}
+    
+   El resultado de la suma es:{{suma}}
   </ion-item>
 
   <ion-item >
-    LA RESTA DE {{this.numero1}}-{{this.numero2}} = {{this.resta}}
+    El resultado de la resta es:{{resta}}
   </ion-item>
   
   <ion-item >
-    LA MULTIPLICACION DE {{this.numero1}}*{{this.numero2}} = {{this.multi}} 
+    El resultado de la multiplicacion es:{{multi}} 
   </ion-item>
 
   <ion-item >
-    LA DIVISION DE {{this.numero1}}/{{this.numero2}} = {{this.dividir}}
+    El resultado de la division es:{{division}}
   </ion-item>
     
    
