--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,7 +13,7 @@
   
   <ion-button shape="round" color="success" routerLink="/iniciooperaciones">INICIO OPERACIONES</ion-button>
 
-  <ion-button shape="round" color="success" routerLink="/parcial">PARCIAL</ion-button>
+  <ion-button shape="round" color="success" routerLink="/parcial"><ion-icon name="calculator"></ion-icon>PARCIAL</ion-button>
 
   <ion-item>
     <ion-label position="floating"><ion-icon name="person-circle-outline"></ion-icon>NOMBRES:</ion-label>
