--- a/src/app/parcial/parcial.page.html
+++ b/src/app/parcial/parcial.page.html
@@ -12,7 +12,7 @@
   </ion-item>
   <ion-item *ngFor="let numeroGrupo of gruponumsimbolos">
   
-    <ion-button *ngFor="let numero of numeroGrupo" (click)="onButtonPress(numero)" class="calc-button" color="warning">{{numero}}
+    <ion-button *ngFor="let numero of numeroGrupo" (click)="onButtonPress(numero)" class="calculadora-button" color="warning">{{numero}}
 
     </ion-button>
   </ion-item>
