--- a/src/app/parcial/parcial.page.scss
+++ b/src/app/parcial/parcial.page.scss
@@ -3,8 +3,8 @@
     font-size: 40px;
 }
 
-.calc-button {
-    width: calc(18% - 4px);
-    height: 64px;
+.calculadora-button {
+    width: calc(20% - 4px);
+    height: 60px;
     font-size: 32px;
 }
